tests/snapshots/formats__icc__gray-v2.icc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ gray-v2.icc — ICC profile v2.1.0, Display device, Gray → XYZ, "fillyfoal gray 2.2"  [0x0+0x224]
  ▾ Header  [0x0+0x80]
      Profile size: 548  [0x0+0x4]
      Preferred CMM type: "lcms" — Little CMS  [0x4+0x4]
      Version: 0x2100000 — 2.1.0  [0x8+0x4]
      Device class: Display device (0x6d6e7472)  [0xc+0x4]
      Data colour space: Gray (0x47524159)  [0x10+0x4]
      Profile connection space: XYZ (0x58595a20)  [0x14+0x4]
      Date and time: 2026-10-05 12:00:00 UTC  [0x18+0xc]
      Signature: "acsp"  [0x24+0x4]
      Primary platform: Apple (0x4150504c)  [0x28+0x4]
      Profile flags: 0x0 []  [0x2c+0x4]
      Device manufacturer: "none"  [0x30+0x4]
      Device model: 0x0  [0x34+0x4]
      Device attributes: 0x0 []  [0x38+0x8]
      Rendering intent: Perceptual (0x0)  [0x40+0x4]
      PCS illuminant X: 0.964202880859375  [0x44+0x4]
      PCS illuminant Y: 1  [0x48+0x4]
      PCS illuminant Z: 0.8249053955078125  [0x4c+0x4]
      Profile creator: "ffoa"  [0x50+0x4]
      Profile ID: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x54+0x10]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x64+0x1c]
  ▾ Tag table — 10 tags  [0x80+0x7c]
    ▾ Profile description: "fillyfoal gray 2.2" — 'desc', type 'desc', 109 bytes  [0xfc+0x6d]
        Type: "desc"  [0xfc+0x4]
        Reserved: 0  [0x100+0x4]
        ASCII count: 19  [0x104+0x4]
        ASCII description: "fillyfoal gray 2.2"  [0x108+0x13]
        Unicode language: 0x0  [0x11b+0x4]
        Unicode count: 0  [0x11f+0x4]
        ScriptCode code: 0  [0x123+0x2]
        ScriptCode count: 0  [0x125+0x1]
    ▾ Copyright: "Public domain test data" — 'cprt', type 'text', 32 bytes  [0x16c+0x20]
        Type: "text"  [0x16c+0x4]
        Reserved: 0  [0x170+0x4]
        Text: "Public domain test data"  [0x174+0x18]
    ▾ Media white point: "X 0.9505, Y 1.0000, Z 1.0890" — 'wtpt', type 'XYZ ', 20 bytes  [0x18c+0x14]
        Type: "XYZ "  [0x18c+0x4]
        Reserved: 0  [0x190+0x4]
        X: 0.95050048828125  [0x194+0x4]
        Y: 1  [0x198+0x4]
        Z: 1.0890045166015625  [0x19c+0x4]
    ▾ Gray tone reproduction curve: "gamma 2.199" — 'kTRC', type 'curv', 14 bytes  [0x1a0+0xe]
        Type: "curv"  [0x1a0+0x4]
        Reserved: 0  [0x1a4+0x4]
        Entries: 1  [0x1a8+0x4]
        Gamma: 2.19921875  [0x1ac+0x2]
    ▾ Media black point: "X 0.0000, Y 0.0000, Z 0.0000" — 'bkpt', type 'XYZ ', 20 bytes  [0x1b0+0x14]
        Type: "XYZ "  [0x1b0+0x4]
        Reserved: 0  [0x1b4+0x4]
        X: 0  [0x1b8+0x4]
        Y: 0  [0x1bc+0x4]
        Z: 0  [0x1c0+0x4]
    ▾ Technology: "Cathode ray tube display" — 'tech', type 'sig ', 12 bytes  [0x1c4+0xc]
        Type: "sig "  [0x1c4+0x4]
        Reserved: 0  [0x1c8+0x4]
        Signature: "CRT " — Cathode ray tube display  [0x1cc+0x4]
    ▾ Video card gamma table (Apple) — 'vcgt', type 'vcgt', 20 bytes  [0x1d0+0x14]
        Type: "vcgt"  [0x1d0+0x4]
        Reserved: 0  [0x1d4+0x4]
        Gamma type: 0 — table  [0x1d8+0x4]
        Channels: 0  [0x1dc+0x2]
        Entries per channel: 0  [0x1de+0x2]
        Entry size: 0  [0x1e0+0x2]
        Table — 0 bytes  [0x1e2+0x0]
    ▾ Luminance: "X 0.0000, Y 80.0000, Z 0.0000" — 'lumi', type 'XYZ ', 20 bytes  [0x1e4+0x14]
        Type: "XYZ "  [0x1e4+0x4]
        Reserved: 0  [0x1e8+0x4]
        X: 0  [0x1ec+0x4]
        Y: 80  [0x1f0+0x4]
        Z: 0  [0x1f4+0x4]
    ▾ Calibration date/time: "2026-10-01 08:30:00" — 'calt', type 'dtim', 20 bytes  [0x1f8+0x14]
        Type: "dtim"  [0x1f8+0x4]
        Reserved: 0  [0x1fc+0x4]
        Year: 2026  [0x200+0x2]
        Month: 10  [0x202+0x2]
        Day: 1  [0x204+0x2]
        Hour: 8  [0x206+0x2]
        Minute: 30  [0x208+0x2]
        Second: 0  [0x20a+0x2]
    ▾ Output response: "5-point curve" — 'resp', type 'curv', 22 bytes  [0x20c+0x16]
        Type: "curv"  [0x20c+0x4]
        Reserved: 0  [0x210+0x4]
        Entries: 5  [0x214+0x4]
        Table — 5 16-bit entries, about gamma 1.00  [0x218+0xa]
