tests/snapshots/formats__icc__lcms-srgb-id.icc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ lcms-srgb-id.icc — ICC profile v4.4.0, Display device, RGB → XYZ, "sRGB built-in", by Little CMS  [0x0+0x24c]
  ▾ Header  [0x0+0x80]
      Profile size: 588  [0x0+0x4]
      Preferred CMM type: "lcms" — Little CMS  [0x4+0x4]
      Version: 0x4400000 — 4.4.0  [0x8+0x4]
      Device class: Display device (0x6d6e7472)  [0xc+0x4]
      Data colour space: RGB (0x52474220)  [0x10+0x4]
      Profile connection space: XYZ (0x58595a20)  [0x14+0x4]
      Date and time: 2026-10-09 15:34:25 UTC  [0x18+0xc]
      Signature: "acsp"  [0x24+0x4]
      Primary platform: Apple (0x4150504c)  [0x28+0x4]
      Profile flags: 0x0 []  [0x2c+0x4]
      Device manufacturer: "none"  [0x30+0x4]
      Device model: 0x0  [0x34+0x4]
      Device attributes: 0x0 []  [0x38+0x8]
      Rendering intent: Perceptual (0x0)  [0x40+0x4]
      PCS illuminant X: 0.964202880859375  [0x44+0x4]
      PCS illuminant Y: 1  [0x48+0x4]
      PCS illuminant Z: 0.8249053955078125  [0x4c+0x4]
      Profile creator: "lcms" — Little CMS  [0x50+0x4]
      Profile ID: 43 70 1c 9c 4b e8 35 8c 15 d8 3a d9 ca 43 1e ed  |Cp..K.5...:..C..| — MD5 verified  [0x54+0x10]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x64+0x1c]
  ▾ Tag table — 11 tags  [0x80+0x88]
    ▾ Profile description: "sRGB built-in" — 'desc', type 'mluc', 54 bytes  [0x108+0x36]
        Type: "mluc"  [0x108+0x4]
        Reserved: 0  [0x10c+0x4]
        Records: 1  [0x110+0x4]
        Record size: 12  [0x114+0x4]
        Language: "en"  [0x118+0x2]
        Country: "US"  [0x11a+0x2]
        Length: 26  [0x11c+0x4]
        Offset: 0x1c  [0x120+0x4]
        en-US: "sRGB built-in"  [0x124+0x1a]
    ▾ Copyright: "No copyright, use freely" — 'cprt', type 'mluc', 76 bytes  [0x140+0x4c]
        Type: "mluc"  [0x140+0x4]
        Reserved: 0  [0x144+0x4]
        Records: 1  [0x148+0x4]
        Record size: 12  [0x14c+0x4]
        Language: "en"  [0x150+0x2]
        Country: "US"  [0x152+0x2]
        Length: 48  [0x154+0x4]
        Offset: 0x1c  [0x158+0x4]
        en-US: "No copyright, use freely"  [0x15c+0x30]
    ▾ Media white point: "X 0.9642, Y 1.0000, Z 0.8249" — 'wtpt', type 'XYZ ', 20 bytes  [0x18c+0x14]
        Type: "XYZ "  [0x18c+0x4]
        Reserved: 0  [0x190+0x4]
        X: 0.964202880859375  [0x194+0x4]
        Y: 1  [0x198+0x4]
        Z: 0.8249053955078125  [0x19c+0x4]
    ▾ Chromatic adaptation: "1.0479 0.0229 -0.0502 0.0296 0.9905 -0.0171 -0.0092 0.0151 0.7517" — 'chad', type 'sf32', 44 bytes  [0x1a0+0x2c]
        Type: "sf32"  [0x1a0+0x4]
        Reserved: 0  [0x1a4+0x4]
        Value: 1.047882080078125  [0x1a8+0x4]
        Value: 0.022918701171875  [0x1ac+0x4]
        Value: -0.0502166748046875  [0x1b0+0x4]
        Value: 0.0295867919921875  [0x1b4+0x4]
        Value: 0.990478515625  [0x1b8+0x4]
        Value: -0.0170745849609375  [0x1bc+0x4]
        Value: -0.009246826171875  [0x1c0+0x4]
        Value: 0.01507568359375  [0x1c4+0x4]
        Value: 0.751678466796875  [0x1c8+0x4]
    ▾ Red matrix column: "X 0.4360, Y 0.2225, Z 0.0139" — 'rXYZ', type 'XYZ ', 20 bytes  [0x1cc+0x14]
        Type: "XYZ "  [0x1cc+0x4]
        Reserved: 0  [0x1d0+0x4]
        X: 0.43603515625  [0x1d4+0x4]
        Y: 0.2224884033203125  [0x1d8+0x4]
        Z: 0.013916015625  [0x1dc+0x4]
    ▾ Blue matrix column: "X 0.1431, Y 0.0606, Z 0.7139" — 'bXYZ', type 'XYZ ', 20 bytes  [0x1e0+0x14]
        Type: "XYZ "  [0x1e0+0x4]
        Reserved: 0  [0x1e4+0x4]
        X: 0.1430511474609375  [0x1e8+0x4]
        Y: 0.06060791015625  [0x1ec+0x4]
        Z: 0.7139129638671875  [0x1f0+0x4]
    ▾ Green matrix column: "X 0.3851, Y 0.7169, Z 0.0971" — 'gXYZ', type 'XYZ ', 20 bytes  [0x1f4+0x14]
        Type: "XYZ "  [0x1f4+0x4]
        Reserved: 0  [0x1f8+0x4]
        X: 0.3851165771484375  [0x1fc+0x4]
        Y: 0.7169036865234375  [0x200+0x4]
        Z: 0.0970611572265625  [0x204+0x4]
    ▾ Red tone reproduction curve: "function 3, gamma 2.400" — 'rTRC', type 'para', 32 bytes  [0x208+0x20]
        Type: "para"  [0x208+0x4]
        Reserved: 0  [0x20c+0x4]
        Function type: 3 — Y = (aX+b)^g for X ≥ d, else cX  [0x210+0x2]
        Reserved: 0  [0x212+0x2]
        g: 2.399993896484375  [0x214+0x4]
        a: 0.9478607177734375  [0x218+0x4]
        b: 0.0521392822265625  [0x21c+0x4]
        c: 0.077392578125  [0x220+0x4]
        d: 0.0404510498046875  [0x224+0x4]
    ▾ Green tone reproduction curve: "function 3, gamma 2.400" — 'gTRC', type 'para', 32 bytes  [0x208+0x20]
        Type: "para"  [0x208+0x4]
        Reserved: 0  [0x20c+0x4]
        Function type: 3 — Y = (aX+b)^g for X ≥ d, else cX  [0x210+0x2]
        Reserved: 0  [0x212+0x2]
        g: 2.399993896484375  [0x214+0x4]
        a: 0.9478607177734375  [0x218+0x4]
        b: 0.0521392822265625  [0x21c+0x4]
        c: 0.077392578125  [0x220+0x4]
        d: 0.0404510498046875  [0x224+0x4]
    ▾ Blue tone reproduction curve: "function 3, gamma 2.400" — 'bTRC', type 'para', 32 bytes  [0x208+0x20]
        Type: "para"  [0x208+0x4]
        Reserved: 0  [0x20c+0x4]
        Function type: 3 — Y = (aX+b)^g for X ≥ d, else cX  [0x210+0x2]
        Reserved: 0  [0x212+0x2]
        g: 2.399993896484375  [0x214+0x4]
        a: 0.9478607177734375  [0x218+0x4]
        b: 0.0521392822265625  [0x21c+0x4]
        c: 0.077392578125  [0x220+0x4]
        d: 0.0404510498046875  [0x224+0x4]
    ▾ Chromaticity: "3 channels" — 'chrm', type 'chrm', 36 bytes  [0x228+0x24]
        Type: "chrm"  [0x228+0x4]
        Reserved: 0  [0x22c+0x4]
        Channels: 3  [0x230+0x2]
        Phosphor/colorant type: Unknown (0x0)  [0x232+0x2]
        x: 0.6399993896484375  [0x234+0x4]
        y: 0.3300018310546875  [0x238+0x4]
        x: 0.3000030517578125  [0x23c+0x4]
        y: 0.600006103515625  [0x240+0x4]
        x: 0.149993896484375  [0x244+0x4]
        y: 0.05999755859375  [0x248+0x4]
