tests/snapshots/formats__icc__srgb-like-v4.icc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ srgb-like-v4.icc — ICC profile v4.3.0, Display device, RGB → XYZ, "fillyfoal sRGB-like"  [0x0+0x22c]
  ▾ Header  [0x0+0x80]
      Profile size: 556  [0x0+0x4]
      Preferred CMM type: "lcms"  [0x4+0x4]
      Version: 0x4300000 — 4.3.0  [0x8+0x4]
      Device class: Display device (0x6d6e7472)  [0xc+0x4]
      Data colour space: RGB (0x52474220)  [0x10+0x4]
      Profile connection space: XYZ (0x58595a20)  [0x14+0x4]
      Year: 2026  [0x18+0x2]
      Month: 10  [0x1a+0x2]
      Day: 5  [0x1c+0x2]
      Hour: 12  [0x1e+0x2]
      Minute: 0  [0x20+0x2]
      Second: 0  [0x22+0x2]
      Signature: "acsp"  [0x24+0x4]
      Primary platform: Apple (0x4150504c)  [0x28+0x4]
      Profile flags: 0x0 []  [0x2c+0x4]
      Device manufacturer: "none"  [0x30+0x4]
      Device model: 0x0  [0x34+0x4]
      Device attributes: 0x0 []  [0x38+0x8]
      Rendering intent: Perceptual (0x0)  [0x40+0x4]
      PCS illuminant X: 0.964202880859375  [0x44+0x4]
      PCS illuminant Y: 1  [0x48+0x4]
      PCS illuminant Z: 0.8249053955078125  [0x4c+0x4]
      Profile creator: "ffoa"  [0x50+0x4]
      Profile ID: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x54+0x10]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x64+0x1c]
  ▾ Tag table — 10 tags  [0x80+0x7c]
    ▾ 'desc': Profile description (0x64657363) — 'mluc', 66 bytes: "fillyfoal sRGB-like"  [0xfc+0x42]
        Type: "mluc"  [0xfc+0x4]
        Reserved: 0  [0x100+0x4]
        Records: 1  [0x104+0x4]
        Record size: 12  [0x108+0x4]
        Language: "en"  [0x10c+0x2]
        Country: "US"  [0x10e+0x2]
        Length: 38  [0x110+0x4]
        Offset: 0x1c  [0x114+0x4]
        en-US: "fillyfoal sRGB-like"  [0x118+0x26]
    ▾ 'cprt': Copyright (0x63707274) — 'mluc', 80 bytes: "No copyright, test fixture"  [0x140+0x50]
        Type: "mluc"  [0x140+0x4]
        Reserved: 0  [0x144+0x4]
        Records: 1  [0x148+0x4]
        Record size: 12  [0x14c+0x4]
        Language: "en"  [0x150+0x2]
        Country: "US"  [0x152+0x2]
        Length: 52  [0x154+0x4]
        Offset: 0x1c  [0x158+0x4]
        en-US: "No copyright, test fixture"  [0x15c+0x34]
    ▾ 'wtpt': Media white point (0x77747074) — 'XYZ ', 20 bytes: X 0.9642, Y 1.0000, Z 0.8249  [0x190+0x14]
        Type: "XYZ "  [0x190+0x4]
        Reserved: 0  [0x194+0x4]
        X: 0.964202880859375  [0x198+0x4]
        Y: 1  [0x19c+0x4]
        Z: 0.8249053955078125  [0x1a0+0x4]
    ▾ 'chad': Chromatic adaptation (0x63686164) — 'sf32', 44 bytes  [0x1a4+0x2c]
        Type: "sf32"  [0x1a4+0x4]
        Reserved: 0  [0x1a8+0x4]
        Value: 1.0478973388671875  [0x1ac+0x4]
        Value: 0.0229034423828125  [0x1b0+0x4]
        Value: -0.050201416015625  [0x1b4+0x4]
        Value: 0.02960205078125  [0x1b8+0x4]
        Value: 0.9904022216796875  [0x1bc+0x4]
        Value: -0.0171051025390625  [0x1c0+0x4]
        Value: -0.0092010498046875  [0x1c4+0x4]
        Value: 0.015106201171875  [0x1c8+0x4]
        Value: 0.7519073486328125  [0x1cc+0x4]
    ▾ 'rXYZ': Red matrix column (0x7258595a) — 'XYZ ', 20 bytes: X 0.4361, Y 0.2225, Z 0.0139  [0x1d0+0x14]
        Type: "XYZ "  [0x1d0+0x4]
        Reserved: 0  [0x1d4+0x4]
        X: 0.43609619140625  [0x1d8+0x4]
        Y: 0.222503662109375  [0x1dc+0x4]
        Z: 0.0139007568359375  [0x1e0+0x4]
    ▾ 'gXYZ': Green matrix column (0x6758595a) — 'XYZ ', 20 bytes: X 0.3851, Y 0.7169, Z 0.0971  [0x1e4+0x14]
        Type: "XYZ "  [0x1e4+0x4]
        Reserved: 0  [0x1e8+0x4]
        X: 0.385101318359375  [0x1ec+0x4]
        Y: 0.7169036865234375  [0x1f0+0x4]
        Z: 0.09710693359375  [0x1f4+0x4]
    ▾ 'bXYZ': Blue matrix column (0x6258595a) — 'XYZ ', 20 bytes: X 0.1431, Y 0.0606, Z 0.7141  [0x1f8+0x14]
        Type: "XYZ "  [0x1f8+0x4]
        Reserved: 0  [0x1fc+0x4]
        X: 0.143096923828125  [0x200+0x4]
        Y: 0.0605926513671875  [0x204+0x4]
        Z: 0.7140960693359375  [0x208+0x4]
    ▾ 'rTRC': Red tone reproduction curve (0x72545243) — 'para', 32 bytes: function 3, gamma 2.400  [0x20c+0x20]
        Type: "para"  [0x20c+0x4]
        Reserved: 0  [0x210+0x4]
        Function type: 3  [0x214+0x2]
        Reserved: 0  [0x216+0x2]
        g: 2.399993896484375  [0x218+0x4]
        a: 0.9478607177734375  [0x21c+0x4]
        b: 0.0521392822265625  [0x220+0x4]
        c: 0.077392578125  [0x224+0x4]
        d: 0.0404510498046875  [0x228+0x4]
    ▾ 'gTRC': Green tone reproduction curve (0x67545243) — 'para', 32 bytes: function 3, gamma 2.400  [0x20c+0x20]
        Type: "para"  [0x20c+0x4]
        Reserved: 0  [0x210+0x4]
        Function type: 3  [0x214+0x2]
        Reserved: 0  [0x216+0x2]
        g: 2.399993896484375  [0x218+0x4]
        a: 0.9478607177734375  [0x21c+0x4]
        b: 0.0521392822265625  [0x220+0x4]
        c: 0.077392578125  [0x224+0x4]
        d: 0.0404510498046875  [0x228+0x4]
    ▾ 'bTRC': Blue tone reproduction curve (0x62545243) — 'para', 32 bytes: function 3, gamma 2.400  [0x20c+0x20]
        Type: "para"  [0x20c+0x4]
        Reserved: 0  [0x210+0x4]
        Function type: 3  [0x214+0x2]
        Reserved: 0  [0x216+0x2]
        g: 2.399993896484375  [0x218+0x4]
        a: 0.9478607177734375  [0x21c+0x4]
        b: 0.0521392822265625  [0x220+0x4]
        c: 0.077392578125  [0x224+0x4]
        d: 0.0404510498046875  [0x228+0x4]
