tests/snapshots/formats__icc__test-v4.icc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ test-v4.icc — ICC v4.3, Display device, RGB, "Filly test RGB"  [0x0+0x164]
  ▾ Header  [0x0+0x80]
      Profile size: 356  [0x0+0x4]
      Preferred CMM: "none"  [0x4+0x4]
      Version: 0x4300000 — 4.3.0  [0x8+0x4]
      Device class: Display device (0x6d6e7472)  [0xc+0x4]
      Data color space: RGB (0x52474220)  [0x10+0x4]
      Profile connection space: XYZ (0x58595a20)  [0x14+0x4]
      Year: 2026  [0x18+0x2]
      Month: 10  [0x1a+0x2]
      Day: 6  [0x1c+0x2]
      Hour: 12  [0x1e+0x2]
      Minute: 0  [0x20+0x2]
      Second: 0  [0x22+0x2]
      Signature: "acsp"  [0x24+0x4]
      Primary platform: Apple (0x4150504c)  [0x28+0x4]
      Flags: 0x0 []  [0x2c+0x4]
      Device manufacturer: "none"  [0x30+0x4]
      Device model: 0x0  [0x34+0x4]
      Device attributes: 0x0  [0x38+0x8]
      Rendering intent: Perceptual (0x0)  [0x40+0x4]
      Illuminant X: 63190 — 0.9642  [0x44+0x4]
      Illuminant Y: 65536 — 1.0000  [0x48+0x4]
      Illuminant Z: 54061 — 0.8249  [0x4c+0x4]
      Profile creator: "none"  [0x50+0x4]
      Profile ID: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0x54+0x10]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x64+0x1c]
  ▾ Tag table — 6 tags  [0x80+0x4c]
    ▾ desc: "Filly test RGB" — Profile description (mluc)  [0x84+0xc] → 0xcc+0x38
        Signature: "desc"  [0x84+0x4]
        Offset: 0xcc  [0x88+0x4]
        Size: 56  [0x8c+0x4]
        Type: "mluc"  [0xcc+0x4]
        Reserved: 0  [0xd0+0x4]
        Data  [0xd4+0x30]
    ▾ cprt: "No copyright, test data" — Copyright (text)  [0x90+0xc] → 0x104+0x20
        Signature: "cprt"  [0x90+0x4]
        Offset: 0x104  [0x94+0x4]
        Size: 32  [0x98+0x4]
        Type: "text"  [0x104+0x4]
        Reserved: 0  [0x108+0x4]
        Data  [0x10c+0x18]
    ▾ wtpt: "0.9642, 1.0000, 0.8249" — Media white point (XYZ)  [0x9c+0xc] → 0x124+0x14
        Signature: "wtpt"  [0x9c+0x4]
        Offset: 0x124  [0xa0+0x4]
        Size: 20  [0xa4+0x4]
        Type: "XYZ "  [0x124+0x4]
        Reserved: 0  [0x128+0x4]
        Data  [0x12c+0xc]
    ▾ rTRC: "gamma 2.199" — Red tone reproduction curve (curv)  [0xa8+0xc] → 0x138+0x10
        Signature: "rTRC"  [0xa8+0x4]
        Offset: 0x138  [0xac+0x4]
        Size: 16  [0xb0+0x4]
        Type: "curv"  [0x138+0x4]
        Reserved: 0  [0x13c+0x4]
        Data  [0x140+0x8]
    ▾ gTRC: "parametric curve, function 0" — Green tone reproduction curve (para)  [0xb4+0xc] → 0x148+0x10
        Signature: "gTRC"  [0xb4+0x4]
        Offset: 0x148  [0xb8+0x4]
        Size: 16  [0xbc+0x4]
        Type: "para"  [0x148+0x4]
        Reserved: 0  [0x14c+0x4]
        Data  [0x150+0x8]
    ▾ tech: "CRT " — Technology (sig)  [0xc0+0xc] → 0x158+0xc
        Signature: "tech"  [0xc0+0x4]
        Offset: 0x158  [0xc4+0x4]
        Size: 12  [0xc8+0x4]
        Type: "sig "  [0x158+0x4]
        Reserved: 0  [0x15c+0x4]
        Data  [0x160+0x4]
